# torchdendrite

./: LICENSE.txt  README.md  __init__.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
notebooks/: train_resnet.ipynb  visualize_results.ipynb
scripts/: submit_linear_leaky_mnist.sh  submit_linear_mnists.sh  submit_train_leaky_mnist.sh  submit_train_mnist.sh  submit_train_simulated_regression.sh  train_conv_mnist.py  train_leaky_mnist.py  train_mnist.py  train_resnet.py  train_resnet_accel.py  train_simulated_regression.py
src/torchdendrite/: __about__.py
src/torchdendrite/models/: __init__.py  conv_models.py  linear_models.py
src/torchdendrite/models/modules/: __init__.py  dendrites.py
src/torchdendrite/utils/: __init__.py  datasets.py  logger.py  plot_results.py  training_scripts.py
tests/models/: test_conv_models.py
tests/models/modules/: test_dendrites.py
